example-1-nginx/kube/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-1-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-1-nginx-deployment
  template:
    metadata:
      labels:
        app: example-1-nginx-deployment
    spec:
      containers:
        - name: example-1-nginx-deployment
          image: nginx:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
