example-1-nginx/kube/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
spec:
  selector:
    app: example-1-nginx-deployment
  ports:
    - port: 80
      targetPort: 80
